@@ -69,6 +69,25 @@ void Map::chooseSprite(int x, int y) {
     findPointer(x, y) -> spritePlace.x = row;
 }
 
+/* Return true if there's a nonempty foreground tile next to this place. */
+bool Map::canPutTile(int x, int y) const {
+    // Can only place a tile next to one already there
+    bool canPut = false;
+    for (int i = -1; i < 2; i++) {
+        for (int j = -1; j < 2; j++) {
+            // Don't check the status of tiles off the edge of the map, 
+            // or if it's part of a diagonal line through the center tile
+            if (isOnMap(x + i, y + j) && i != j && i != -1 * j
+                    && getForeground(x + i, y + j) -> type != TileType::EMPTY) {
+                canPut = true;
+            }
+        }
+    }
+
+    return canPut;
+
+}
+
 /* Return true if neither the foreground nor background is opaque. */
 inline bool Map::isSky(int x, int y) {
     return (getForeground(x, y) -> opacity == 0
@@ -109,12 +128,44 @@ void Map::setLight(int x, int y) {
     place -> light.b = 0;
     int dist = skyDistance(x, y, 25);
     place -> light.skyIntensity = 255 * max(0.0, exp((1 - dist) / 8.0));
+    // And now the values are correct
+    place -> isLightUpdated = true;
+}
+
+/* Return true if this is a plce on the map. */
+bool Map::isOnMap(int x, int y) const {
+    return (x >= 0 && y >= 0 && x < width && y < height);
+}
+
+/* Tell all thetiles nearby to have the right sprite and the right amount of 
+light. */
+void Map::updateNear(int x, int y) {
+    // Update the sprites
+    for (int i = -1; i < 2; i++) {
+        for (int j = -1; j < 2; j++) {
+            if (isOnMap(x + i, y + j)) {
+                chooseSprite(x + i, y + j);
+            }
+        }
+    }
+
+    // Update the lighting
+    // The range to update lighting, in each direction
+    int range = 8;
+    for (int i = -1 * range; i < range + 1; i++) {
+        for (int j = -1 * range; j < range + 1; j++) {
+            if (isOnMap(x + i, y + j)) {
+                findPointer(x + i, y + j) -> isLightUpdated = false;
+            }
+        }
+    }
 }
 
 // Public methods
 
 // Constructor, based on a world file that exists
-Map::Map(string filename) {
+Map::Map(string filename, int tileWidth, int tileHeight) 
+        : TILE_WIDTH(tileWidth), TILE_HEIGHT(tileHeight) {
     ifstream infile(filename);
 
     // Check that the file could be opened
@@ -171,7 +222,9 @@ Map::Map(string filename) {
             if (getForeground(i, j) -> type != TileType::EMPTY) {
                 chooseSprite(i, j);
             }
-            setLight(i, j);
+            // Tell the spaces they should figure out how wel-lit they are 
+            // before they get rendered
+            findPointer(i, j) -> isLightUpdated = false;
         }
     }
 }
@@ -198,6 +251,16 @@ int Map::getWidth() const {
     return width;
 }
 
+// Return the height, in pixels, of each tile
+int Map::getTileHeight() const {
+    return TILE_HEIGHT;
+}
+
+// Return the height, in pixels, of each tile
+int Map::getTileWidth() const {
+    return TILE_WIDTH;
+}
+
 // Return the default spawn point
 Location Map::getSpawn() const {
     return spawn;
@@ -209,9 +272,14 @@ Location Map::getSpritePlace(int x, int y) const {
 }
 
 // Return lighting
-Light Map::getLight(int x, int y) const {
+Light Map::getLight(int x, int y) {
+    // Set the light to the correct value, if necessary
+    if (!findPointer(x, y) -> isLightUpdated) {
+        setLight(x, y);
+    }
+
     Light light;
-    // Combine the value from blocks wit hthe value from the sky, taking into
+    // Combine the value from blocks with the value from the sky, taking into
     // account that the color of light the sky makes
     light.useSky(findPointer(x, y) -> light, getSkyColor(x, y));
     return light;
@@ -242,11 +310,38 @@ Tile *Map::getBackground(int x, int y) const {
 // Set the foreground tile at x, y equal to val
 void Map::setForeground(int x, int y, Tile* const &val) {
     findPointer(x, y) -> foreground = val;
+    // Set all the sprite and light values nearby
+    updateNear(x, y);
 }
 
 // Set the background tile at x, y equal to val
 void Map::setBackground(int x, int y, Tile* const &val) {
     findPointer(x, y) -> background = val;
+}
+
+// Put a tile at the foreground at x, y if possible, return success
+bool Map::placeForeground(int x, int y, TileType type) {
+    // Can only place atile if there isn't one there already
+    if (getForeground(x, y) -> type != TileType::EMPTY) {
+        cout << "There's already a tile there!\n";
+        return false;
+    }
+
+    if (!canPutTile(x, y)) {
+        cout << "The tile needs to be next to a solid tile. \n";
+        return false;
+    }
+
+    setForeground(x, y, makeTile(type));
+    // TODO: change this when I add furniture
+
+    return true;
+}
+
+// Put a tile in the background at x, y if possible, return success
+bool Map::placeBackground(int x, int y, TileType type) {
+    setBackground(x, y, makeTile(type));
+    return true;
 }
 
 // Gets the map's list of the tile pointers it uses
